--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,11 @@ server:
   port: 8761
 
 eureka:
-  client:
+  instance:
+    hostname: localhost
+  client:  
     registerWithEureka: false
     fetchRegistry: false
-  server:
-    waitTimeInMsWhenSyncEmpty: 0
+    serviceUrl:
+     defaultZone: http://localhost:8761/eureka/
 
