--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
   port: 8761
+  
+spring:
+  application:
+    name: sa-discovery
 
 eureka:
-  instance:
-    hostname: localhost
-  client:  
+  client:
     registerWithEureka: false
     fetchRegistry: false
-    serviceUrl:
-     defaultZone: http://localhost:8761/eureka/
 
